--- a/index.html
+++ b/index.html
@@ -192,66 +192,66 @@
                 <div class="col-lg-4 col-md-6 col-sm-8">
                     <div class="single-services text-center mt-30 wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.4s">
                         <div class="services-icon">
-                            <i class="lni-paint-roller"></i>
+                            <i class="lni-bricks"></i>
                         </div>
                         <div class="services-content mt-15">
-                            <h4 class="services-title">Interior Design</h4>
-                            <p class="mt-20">Mauris aliquam, turpis sed mattis placerat, justo risus pellentesque quam, id finibus risus arcu eget neque.</p>
+                            <h4 class="services-title">Master Alloys</h4>
+                            <p class="mt-20">We produce Al-Sr master alloys, which are essential for the casting industry, with an eco-friendly and environmentally friendly process using local resources.</p>
                         </div>
                     </div> <!-- single services -->
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-8">
                     <div class="single-services text-center mt-30 wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.8s">
                         <div class="services-icon">
-                            <i class="lni-blackboard"></i>
+                            <i class="lni-vector"></i>
                         </div>
                         <div class="services-content mt-15">
-                            <h4 class="services-title">Design Consultancy</h4>
-                            <p class="mt-20">Mauris aliquam, turpis sed mattis placerat, justo risus pellentesque quam, id finibus risus arcu eget neque.</p>
+                            <h4 class="services-title">High Entropy Alloys</h4>
+                            <p class="mt-20">We are developing new generation superior alloys with the high entropy approach.</p>
                         </div>
                     </div> <!-- single services -->
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-8">
                     <div class="single-services text-center mt-30 wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="1.2s">
                         <div class="services-icon">
-                            <i class="lni-home"></i>
+                            <i class="lni-sun"></i>
                         </div>
                         <div class="services-content mt-15">
-                            <h4 class="services-title">Residential Design</h4>
-                            <p class="mt-20">Mauris aliquam, turpis sed mattis placerat, justo risus pellentesque quam, id finibus risus arcu eget neque.</p>
+                            <h4 class="services-title">Nano Phosphors</h4>
+                            <p class="mt-20">Rare Earth dopped Sr aluminates and borates can emit in various colors for a long time.</p>
                         </div>
                     </div> <!-- single services -->
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-8">
                     <div class="single-services text-center mt-30 wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.4s">
                         <div class="services-icon">
-                            <i class="lni-briefcase"></i>
+                            <i class="lni-grow"></i>
                         </div>
                         <div class="services-content mt-15">
-                            <h4 class="services-title">Commercial Design</h4>
-                            <p class="mt-20">Mauris aliquam, turpis sed mattis placerat, justo risus pellentesque quam, id finibus risus arcu eget neque.</p>
+                            <h4 class="services-title">Recycling</h4>
+                            <p class="mt-20">We are turning end-of-life fluorescent lamps from being an environmental threat into valuable materials for the industry.</p>
                         </div>
                     </div> <!-- single services -->
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-8">
                     <div class="single-services text-center mt-30 wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.8s">
                         <div class="services-icon">
-                            <i class="lni-handshake"></i>
+                            <i class="lni-magnet"></i>
                         </div>
                         <div class="services-content mt-15">
-                            <h4 class="services-title">Hospitality Design</h4>
-                            <p class="mt-20">Mauris aliquam, turpis sed mattis placerat, justo risus pellentesque quam, id finibus risus arcu eget neque.</p>
+                            <h4 class="services-title">Ferrites</h4>
+                            <p class="mt-20">Ferrites, which are stable and permanent magnets, are very successful in preventing electromagnetic radiation.</p>
                         </div>
                     </div> <!-- single services -->
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-8">
                     <div class="single-services text-center mt-30 wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="1.2s">
                         <div class="services-icon">
-                            <i class="lni-grow"></i>
+                            <i class="lni-magnifier"></i>
                         </div>
                         <div class="services-content mt-15">
-                            <h4 class="services-title">Co-working Space Design</h4>
-                            <p class="mt-20">Mauris aliquam, turpis sed mattis placerat, justo risus pellentesque quam, id finibus risus arcu eget neque.</p>
+                            <h4 class="services-title">Nano Ceramic</h4>
+                            <p class="mt-20">Besides oxide ceramics, we produce carbides and borides in sub-micron sizes for various applications.</p>
                         </div>
                     </div> <!-- single services -->
                 </div>
