Service content updated

--- a/index.html
+++ b/index.html
@@ -192,11 +192,11 @@
                 <div class="col-lg-4 col-md-6 col-sm-8">
                     <div class="single-services text-center mt-30 wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.4s">
                         <div class="services-icon">
-                            <i class="lni-bricks"></i>
+                            <i class="lni-brick"></i>
                         </div>
                         <div class="services-content mt-15">
                             <h4 class="services-title">Master Alloys</h4>
-                            <p class="mt-20">We produce Al-Sr master alloys, which are essential for the casting industry, with an eco-friendly and environmentally friendly process using local resources.</p>
+                            <p class="mt-20">We produce Al-Sr master alloy for the casting industry, with an eco-friendly and economic process using local resources.</p>
                         </div>
                     </div> <!-- single services -->
                 </div>
