--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                         </div>
                         <div class="services-content mt-15">
                             <h4 class="services-title">Master Alloys</h4>
-                            <p class="mt-20">We produce Al-Sr master alloy for the casting industry, with an eco-friendly and economic process using local resources.</p>
+                            <p class="mt-20">We produce Al-Sr master alloy for the casting industry, with an eco-friendly and economic process.</p>
                         </div>
                     </div> <!-- single services -->
                 </div>
@@ -240,7 +240,7 @@
                         </div>
                         <div class="services-content mt-15">
                             <h4 class="services-title">Ferrites</h4>
-                            <p class="mt-20">Ferrites, which are stable and permanent magnets, are very successful in preventing electromagnetic radiation.</p>
+                            <p class="mt-20">Ferrites, which are stable and permanent magnets, are very successful in shielding electromagnetic radiation.</p>
                         </div>
                     </div> <!-- single services -->
                 </div>
@@ -289,7 +289,7 @@
                     </div> <!-- single team -->
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-6">
-                    <div class="single-team text-center mt-30 wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="1.6s">
+                    <div class="single-team text-center mt-30 wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.8s">
                         <div class="team-image">
                             <img src="assets/images/team/ayse.jpg" alt="Team">
                         </div>
@@ -303,7 +303,7 @@
                     </div> <!-- single team -->
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-6">
-                    <div class="single-team text-center mt-30 wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.8s">
+                    <div class="single-team text-center mt-30 wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="1.2s">
                         <div class="team-image">
                             <img src="assets/images/team/cuneyt.jpg" alt="Team">
                         </div>
@@ -317,7 +317,7 @@
                     </div> <!-- single team -->
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-6">
-                    <div class="single-team text-center mt-30 wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="1.2s">
+                    <div class="single-team text-center mt-30 wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="1.6s">
                         <div class="team-image">
                             <img src="assets/images/team/derya.jpg" alt="Team">
                         </div>
